state vectors and eq set. (next: orientation, input)

--- a/dqn_demo/quadrotor/quadrotor_sim.ipynb
+++ b/dqn_demo/quadrotor/quadrotor_sim.ipynb
@@ -6,8 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import casadi as ca\n",
-    "import scipy.integrate"
+    "import scipy.integrate\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -16,41 +18,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# state (x)\n",
-    "            \n",
-    "x = ca.SX.sym('x',12)\n",
-    "omega_b = x[0:3]                       # Angular velocity (body)\n",
-    "vel_b = x[3:6]                         # Velocity (body)\n",
-    "pos_n = x[6:9]                         # Position (inertial)\n",
-    "euler = x[9:12]                        # Orientation (inertial)\n",
+    "def euler_kinematics(e, w):\n",
+    "    '''Derivative of Euler angles'''\n",
+    "    v = ca.SX.sym('v',3)\n",
+    "    v[0] = (w[1]*ca.sin(e[2])+w[2]*ca.cos(e[2]))/ca.cos(e[1])\n",
+    "    v[1] = w[1]*ca.cos(e[2]) - w[2]*ca.sin(e[2])\n",
+    "    v[2] = w[0] + (w[1]*ca.sin(e[2]+w[2]*ca.cos(e[2])))*ca.tan(e[1])\n",
+    "    return v\n",
     "\n",
-    "x0 = [0]*12\n",
+    "def euler_to_dcm(e):\n",
+    "    ''' Transition from Euler angles to direction cosine matrix'''\n",
+    "    R = ca.SX.sym('R', 3)\n",
+    "    \n",
+    "    return R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def derive_equations():\n",
+    "    arm_angles_deg = [45, -135, -45, 135]\n",
+    "    motor_dirs = [1, 1, -1, -1]\n",
     "\n",
-    "# parameters\n",
-    "l_arm = ca.SX.sym('l_arm')\n",
-    "m = ca.SX.sym('m')\n",
-    "rho = ca.SX.sym('rho')\n",
-    "Jx = ca.SX.sym('Jx')\n",
-    "Jy = ca.SX.sym('Jy')\n",
-    "Jz = ca.SX.sym('Jz')\n",
-    "CT = ca.SX.sym('CT')\n",
-    "CM = ca.SX.sym('CM')\n",
-    "kV = ca.SX.sym('kV')\n",
-    "vBatt = ca.SX.sym('vBatt')\n",
-    "r_prop = ca.SX.sym('r_prop')\n",
-    "g = ca.SX.sym('g')\n",
-    "tau = ca.SX.sym('tau')\n",
-    "p = ca.vertcat(l_arm, m, kV, vBatt, rho, Jx, Jy, Jz, CT, CM, r_prop, g, tau)\n",
-    "p0 = [1, 1, 1550, 11.1, 1.225, 1, 1, 1, 2.7e-4, 5e-5, 0.1778/2, 9.8, 0.015]\n",
+    "    mix_matrix = ca.DM([\n",
+    "        # roll, pitch, yaw, thrust\n",
+    "        [   -1,     1,   1,     1], # duty motor 0\n",
+    "        [    1,    -1,   1,     1], # duty motor 1\n",
+    "        [    1,     1,  -1,     1], # duty motor 2\n",
+    "        [   -1,    -1,  -1,     1], # duty motor 3\n",
+    "    ])\n",
     "\n",
-    "J = ca.diag(ca.vertcat(Jx, Jy, Jz))\n",
+    "    # state (x)\n",
+    "    x = ca.SX.sym('x',12)\n",
+    "    omega_b = x[0:3]                       # Angular velocity (body)\n",
+    "    vel_b = x[3:6]                         # Velocity (body)\n",
+    "    pos_n = x[6:9]                         # Position (inertial)\n",
+    "    euler = x[9:12]                        # Orientation (inertial) = r_nb\n",
     "\n",
-    "x_dot = ca.vertcat(\n",
-    "        ca.mtimes(ca.inv(J), M_b - ca.cross(omega_b, ca.mtimes(J, omega_b))),  # omega dot (angular acceleration)\n",
-    "        F_b/m - ca.cross(omega_b, v_b),                                        # v dot (acceleration)\n",
-    "        so3.Mrp.kinematics(r_nb, omega_b),                                     # angular velocity\n",
-    "        ca.mtimes(C_nb, v_b),                                                  # velocity\n",
-    "    )"
+    "    x0 = [0]*12\n",
+    "\n",
+    "    # input\n",
+    "    n_motors = len(arm_angles_deg)\n",
+    "    u = ca.SX.sym('u', 4)\n",
+    "    duty_cmd = ca.mtimes(mix_matrix, u)\n",
+    "\n",
+    "    # parameters\n",
+    "    l_arm = ca.SX.sym('l_arm')\n",
+    "    m = ca.SX.sym('m')\n",
+    "    rho = ca.SX.sym('rho')\n",
+    "    Jx = ca.SX.sym('Jx')\n",
+    "    Jy = ca.SX.sym('Jy')\n",
+    "    Jz = ca.SX.sym('Jz')\n",
+    "    CT = ca.SX.sym('CT')\n",
+    "    CM = ca.SX.sym('CM')\n",
+    "    kV = ca.SX.sym('kV')\n",
+    "    vBatt = ca.SX.sym('vBatt')\n",
+    "    r_prop = ca.SX.sym('r_prop')\n",
+    "    g = ca.SX.sym('g')\n",
+    "    tau = ca.SX.sym('tau')\n",
+    "    p = ca.vertcat(l_arm, m, kV, vBatt, rho, Jx, Jy, Jz, CT, CM, r_prop, g, tau)\n",
+    "    p0 = [1, 1, 1550, 11.1, 1.225, 1, 1, 1, 2.7e-4, 5e-5, 0.1778/2, 9.8, 0.015]\n",
+    "    # l_arm: length of rotor arm [m]\n",
+    "    # m: mass of vehicle [kg]\n",
+    "    # kV: kV: motor kV constant, [rpm/V]\n",
+    "    # vBatt: voltage of battery [V]\n",
+    "    # rho: density of air [kg/m^3]\n",
+    "    # Jx: moment of inertia to xx\n",
+    "    # Jy: moment of inertia to yy\n",
+    "    # Jz: moment of inertia to zz\n",
+    "    # CT: Thrust coeff\n",
+    "    # CM: Moment coeff\n",
+    "    # r_prop: radius of propeller\n",
+    "    # g: gravity constant [m/s^2]\n",
+    "    # tau: \n",
+    "\n",
+    "    J = ca.diag(ca.vertcat(Jx, Jy, Jz))                                             # Moment of inertia of quadrotor\n",
+    "\n",
+    "    # motor model\n",
+    "    def motor_model(duty, motor_dir):\n",
+    "        omega = duty*vBatt*kV*(2*ca.pi/60)                                          # duty * rad/s\n",
+    "        V = r_prop*duty*vBatt*kV                                                    # round * m/min\n",
+    "        s = ca.pi*r_prop**2                                                         # Area of rotor\n",
+    "        q = rho*V**2/2\n",
+    "        return ca.vertcat(0, 0, -CT*q*s), ca.vertcat(0, 0, motor_dir*CM*q*s)        # rotor thrust(F) and Moment\n",
+    "\n",
+    "    # forces and moments\n",
+    "    C_nb = euler_to_dcm(euler)                                                # from euler to direction cosine matrix\n",
+    "    F_b = ca.mtimes(C_nb, ca.vertcat(0, 0, m*g))                                  # Body force Initialize\n",
+    "    M_b = ca.SX.zeros(3)                                                            # Body moment(torque) Initialize\n",
+    "\n",
+    "    for i in range(n_motors):\n",
+    "        arm_angle = arm_angles_deg[i]*ca.pi/180                                     # deg -> rad\n",
+    "        ri_b = ca.vertcat(l_arm*ca.cos(arm_angle), l_arm*ca.sin(arm_angle), 0)      # vector to each motor from center\n",
+    "        Fi_b, Mi_b = motor_model(duty_cmd[i], motor_dirs[i])                        # get each rotor's F and M\n",
+    "        F_b += Fi_b                                                                 # sum up all rotor F vector\n",
+    "        M_b += Mi_b + ca.cross(ri_b, Fi_b)                                          # sum up all rotor M vector & M from each leg\n",
+    "\n",
+    "    x_dot = ca.vertcat(\n",
+    "            ca.mtimes(ca.inv(J), M_b - ca.cross(omega_b, ca.mtimes(J, omega_b))),    # omega dot (angular acceleration)\n",
+    "            F_b/m - ca.cross(omega_b, vel_b),                                        # v dot (acceleration)\n",
+    "            euler_kinematics(euler, omega_b),                                        # omega (angular velocity) (inertial)\n",
+    "            ca.mtimes(C_nb, vel_b),                                                  # v (velocity) (inertial)\n",
+    "        )"
    ]
   },
   {
