complete with prelim u. bugs need be fixed

--- a/dqn_demo/quadrotor/quadrotor_sim.ipynb
+++ b/dqn_demo/quadrotor/quadrotor_sim.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from __future__ import annotations\n",
     "import numpy as np\n",
     "import casadi as ca\n",
     "import scipy.integrate\n",
@@ -18,6 +19,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def thrust(throttle, rho, r, V, kV, CT, Cm):\n",
+    "    \"\"\"\n",
+    "    throttle: 0-1 controls voltage, []\n",
+    "    rho: density of air, [kg/m^3]\n",
+    "    r: radius of propeller, [m]\n",
+    "    V: voltage of battery [V]\n",
+    "    kV: motor kV constant, [rpm/V]\n",
+    "    \"\"\"\n",
+    "    omega = throttle*V*kV*(2*ca.pi/60)\n",
+    "    q = 0.5*rho*(omega*r)**2\n",
+    "    s = ca.pi*r**2\n",
+    "\n",
+    "    return CT*q*s,Cm*q*s\n",
+    "\n",
     "def euler_kinematics(e, w):\n",
     "    '''Derivative of Euler angles'''\n",
     "    v = ca.SX.sym('v',3)\n",
@@ -28,9 +43,56 @@
     "\n",
     "def euler_to_dcm(e):\n",
     "    ''' Transition from Euler angles to direction cosine matrix'''\n",
-    "    R = ca.SX.sym('R', 3)\n",
+    "    phi = e[0]\n",
+    "    theta = e[1]\n",
+    "    psi = e[2]\n",
+    "    R_z = ca.DM([\n",
+    "        [ca.cos(psi), -ca.sin(psi), 0],\n",
+    "        [ca.sin(psi), ca.cos(psi), 0],\n",
+    "        [0, 0, 1]\n",
+    "    ])\n",
+    "    R_y = ca.DM([\n",
+    "        [ca.cos(theta), 0, ca.sin(theta)],\n",
+    "        [0, 1, 0],\n",
+    "        [-ca.sin(theta), 0, ca.cos(theta)]\n",
+    "    ])\n",
+    "    R_x = ca.DM([\n",
+    "        [1, 0, 0],\n",
+    "        [0, ca.cos(phi), -ca.sin(phi)],\n",
+    "        [0, ca.sin(phi), ca.cos(phi)]\n",
+    "    ])\n",
+    "\n",
+    "    R_zy = ca.mtimes(Rz, Ry)\n",
+    "    R = ca.mtimes(R_zy, R_x)\n",
     "    \n",
-    "    return R"
+    "    return R\n",
+    "\n",
+    "def motor2mix(u_motor):\n",
+    "        '''from each motor duty to effect toward control angles'''\n",
+    "    map = np.array([\n",
+    "        [-1,1,1,-1],\n",
+    "        [1,-1,1,-1],\n",
+    "        [1,1,-1,-1],\n",
+    "        [1,1,1,1]])\n",
+    "    return ca.mtimes(map,u_motor)\n",
+    "\n",
+    "def mix2motor(u_mix):\n",
+    "    '''from input of control to each motor duty'''\n",
+    "    map = np.linalg.inv(np.array([\n",
+    "        [-1,1,1,-1],\n",
+    "        [1,-1,1,-1],\n",
+    "        [1,1,-1,-1],\n",
+    "        [1,1,1,1]]))\n",
+    "    return ca.mtimes(map,u_mix)\n",
+    "\n",
+    "def saturate(motor: ca.SX, len: int) -> ca.SX:\n",
+    "    ''' saturate the input motor voltage '''\n",
+    "    sat = ca.SX.sym('sat', 4)\n",
+    "    for i in range(4):\n",
+    "        v = sat[i]\n",
+    "        v = ca.if_else(v > 1, 1, ca.if_else(v < 0, 0, v))\n",
+    "        sat[i] = v\n",
+    "    return sat"
    ]
   },
   {
@@ -40,16 +102,21 @@
    "outputs": [],
    "source": [
     "def derive_equations():\n",
+    "    # Parameters & rotorcraft data\n",
     "    arm_angles_deg = [45, -135, -45, 135]\n",
-    "    motor_dirs = [1, 1, -1, -1]\n",
-    "\n",
-    "    mix_matrix = ca.DM([\n",
-    "        # roll, pitch, yaw, thrust\n",
-    "        [   -1,     1,   1,     1], # duty motor 0\n",
-    "        [    1,    -1,   1,     1], # duty motor 1\n",
-    "        [    1,     1,  -1,     1], # duty motor 2\n",
-    "        [   -1,    -1,  -1,     1], # duty motor 3\n",
-    "    ])\n",
+    "    arm_angles_rad = [\n",
+    "        (np.pi / 180) * i for i in arm_angles_deg\n",
+    "    ]\n",
+    "    motor_dirs = [1, 1, -1, -1]             # motor rotation direction\n",
+    "    # l_arm = 0.5                             # length or the rotor arm [m]\n",
+    "    # m = 1                                   # mass of vehicle [kg]\n",
+    "    rho = 1.225                             # density of air [kg/m^3]\n",
+    "    # r = 0.05                                # radius of propeller\n",
+    "    V = 11.1                                # voltage of battery [V]\n",
+    "    kV = 1550                               # motor kV constant, [rpm/V]\n",
+    "    CT = 1.0e-2                             # Thrust coeff\n",
+    "    Cm = 1e-4                               # moment coeff\n",
+    "    # CT = 2.7e-4, Cm = 5e-5, r = 0.1778/2 other option\n",
     "\n",
     "    # state (x)\n",
     "    x = ca.SX.sym('x',12)\n",
@@ -58,71 +125,79 @@
     "    pos_n = x[6:9]                         # Position (inertial)\n",
     "    euler = x[9:12]                        # Orientation (inertial) = r_nb\n",
     "\n",
-    "    x0 = [0]*12\n",
-    "\n",
     "    # input\n",
     "    n_motors = len(arm_angles_deg)\n",
-    "    u = ca.SX.sym('u', 4)\n",
-    "    duty_cmd = ca.mtimes(mix_matrix, u)\n",
+    "    u_mix = ca.SX.sym('u_mix', 4)\n",
+    "    u0 = np.array([0, 0, 0, 0.5])       # roll, pitch, yaw, throttle\n",
     "\n",
     "    # parameters\n",
-    "    l_arm = ca.SX.sym('l_arm')\n",
     "    m = ca.SX.sym('m')\n",
-    "    rho = ca.SX.sym('rho')\n",
+    "    l_arm = ca.SX.sym('l_arm')\n",
+    "    r = ca.SX.sym('r')\n",
     "    Jx = ca.SX.sym('Jx')\n",
     "    Jy = ca.SX.sym('Jy')\n",
     "    Jz = ca.SX.sym('Jz')\n",
-    "    CT = ca.SX.sym('CT')\n",
-    "    CM = ca.SX.sym('CM')\n",
-    "    kV = ca.SX.sym('kV')\n",
-    "    vBatt = ca.SX.sym('vBatt')\n",
-    "    r_prop = ca.SX.sym('r_prop')\n",
-    "    g = ca.SX.sym('g')\n",
-    "    tau = ca.SX.sym('tau')\n",
-    "    p = ca.vertcat(l_arm, m, kV, vBatt, rho, Jx, Jy, Jz, CT, CM, r_prop, g, tau)\n",
-    "    p0 = [1, 1, 1550, 11.1, 1.225, 1, 1, 1, 2.7e-4, 5e-5, 0.1778/2, 9.8, 0.015]\n",
-    "    # l_arm: length of rotor arm [m]\n",
-    "    # m: mass of vehicle [kg]\n",
-    "    # kV: kV: motor kV constant, [rpm/V]\n",
-    "    # vBatt: voltage of battery [V]\n",
-    "    # rho: density of air [kg/m^3]\n",
-    "    # Jx: moment of inertia to xx\n",
-    "    # Jy: moment of inertia to yy\n",
-    "    # Jz: moment of inertia to zz\n",
-    "    # CT: Thrust coeff\n",
-    "    # CM: Moment coeff\n",
-    "    # r_prop: radius of propeller\n",
-    "    # g: gravity constant [m/s^2]\n",
-    "    # tau: \n",
+    "    p = ca.vertcat(m, l_arm, r, Jx, Jy, Jz)\n",
+    "\n",
     "\n",
     "    J = ca.diag(ca.vertcat(Jx, Jy, Jz))                                             # Moment of inertia of quadrotor\n",
     "\n",
-    "    # motor model\n",
-    "    def motor_model(duty, motor_dir):\n",
-    "        omega = duty*vBatt*kV*(2*ca.pi/60)                                          # duty * rad/s\n",
-    "        V = r_prop*duty*vBatt*kV                                                    # round * m/min\n",
-    "        s = ca.pi*r_prop**2                                                         # Area of rotor\n",
-    "        q = rho*V**2/2\n",
-    "        return ca.vertcat(0, 0, -CT*q*s), ca.vertcat(0, 0, motor_dir*CM*q*s)        # rotor thrust(F) and Moment\n",
-    "\n",
     "    # forces and moments\n",
-    "    C_nb = euler_to_dcm(euler)                                                # from euler to direction cosine matrix\n",
-    "    F_b = ca.mtimes(C_nb, ca.vertcat(0, 0, m*g))                                  # Body force Initialize\n",
+    "    C_nb = euler_to_dcm(euler)                                                      # from euler to direction cosine matrix\n",
+    "    F_b = ca.mtimes(C_nb, ca.vertcat(0, 0, m*g))                                    # Body force Initialize\n",
     "    M_b = ca.SX.zeros(3)                                                            # Body moment(torque) Initialize\n",
+    "    u_motor = saturate(mix2motor(u_mix), len(motor_dirs))                           # convert u_mix(angle input) to motor duty\n",
     "\n",
     "    for i in range(n_motors):\n",
-    "        arm_angle = arm_angles_deg[i]*ca.pi/180                                     # deg -> rad\n",
-    "        ri_b = ca.vertcat(l_arm*ca.cos(arm_angle), l_arm*ca.sin(arm_angle), 0)      # vector to each motor from center\n",
-    "        Fi_b, Mi_b = motor_model(duty_cmd[i], motor_dirs[i])                        # get each rotor's F and M\n",
-    "        F_b += Fi_b                                                                 # sum up all rotor F vector\n",
-    "        M_b += Mi_b + ca.cross(ri_b, Fi_b)                                          # sum up all rotor M vector & M from each leg\n",
+    "        ri_b = ca.vertcat(\n",
+    "            l_arm*ca.cos(arm_angles_rad[i]),\n",
+    "            l_arm*ca.sin(arm_angles_rad[i]), 0\n",
+    "        )                                                                           # vector to each motor from center\n",
+    "        Fi_b, Mi_b = thrust(\n",
+    "            throttle = u_motor[i], rho, r, V, kV, CT, Cm                            # get scalar F and M of each rotor\n",
+    "        )                                     \n",
+    "        Fi_b_vec = ca.vertcat(0, 0, Fi_b)\n",
+    "        Mi_b_vec = ca.vertcat(0, 0, motor_dirs[i] * Mi_b)                           # get each rotor's F and M vector\n",
+    "        F_b += Fi_b_vec                                                             # sum up all rotor F vector\n",
+    "        M_b += Mi_b_vec + ca.cross(ri_b, Fi_b_vec)                                  # sum up all rotor M vector & M from each leg\n",
     "\n",
-    "    x_dot = ca.vertcat(\n",
-    "            ca.mtimes(ca.inv(J), M_b - ca.cross(omega_b, ca.mtimes(J, omega_b))),    # omega dot (angular acceleration)\n",
-    "            F_b/m - ca.cross(omega_b, vel_b),                                        # v dot (acceleration)\n",
-    "            euler_kinematics(euler, omega_b),                                        # omega (angular velocity) (inertial)\n",
-    "            ca.mtimes(C_nb, vel_b),                                                  # v (velocity) (inertial)\n",
-    "        )"
+    "    rhs = ca.Function('rhs',[x,u_mix,p],[ca.vertcat(\n",
+    "        ca.mtimes(ca.inv(J_b), M_b - ca.cross(omega_b, ca.mtimes(J_b, omega_b))),   # omega dot (angular acceleration)\n",
+    "        F_b/m - ca.cross(omega_b,vel_b),                                            # v dot (acceleration)\n",
+    "        euler_kinematics(euler,omega_b),                                            # omega (angular velocity) (inertial)\n",
+    "        ca.mtimes(C_nb, vel_b),                                                     # v (velocity) (inertial)\n",
+    "        )], ['x','u_mix','p'],['x_dot'])\n",
+    "\n",
+    "\n",
+    "    # prelim controller\n",
+    "    roll_cmd = 0.2\n",
+    "    pitch_cmd = 0.2\n",
+    "    yaw_cmd = 0.2\n",
+    "\n",
+    "    u_control[0] = roll_mix\n",
+    "    u_control[1] = pitch_mix\n",
+    "    u_control[2] = yaw_mix\n",
+    "    u_control[3] = 0.515\n",
+    "    control = ca.Function('control', [x, p], [u_control], ['x', 'p'], ['u'])\n",
+    "\n",
+    "    # rhs = ca.Function('rhs', [x, u, p], [x_dot], ['x', 'u', 'p'], ['x_dot'])\n",
+    "    # shadow_if_necessary = ca.Function('shadow_if_necessary', [r_nb], [so3.Mrp.shadow_if_necessary(r_nb)], ['r_nb'], ['r2_nb'])\n",
+    "    \n",
+    "    # mrp_to_euler = ca.Function('mrp_to_euler', [r_nb], [so3.Euler.from_mrp(r_nb)], ['r_nb'], ['euler'])\n",
+    "    \n",
+    "    # x_sat = ca.SX(x)\n",
+    "    # for i in range(4):\n",
+    "    #     v = x_sat[i + 13]\n",
+    "    #     v = ca.if_else(v > 1, 1, ca.if_else(v < 0, 0, v))\n",
+    "    #     x_sat[i + 13] = v\n",
+    "    # # saturate = ca.Function('saturate', [x], [x_sat], ['x'], ['x_sat'])\n",
+    "\n",
+    "    return {\n",
+    "        'x': x,\n",
+    "        'u_mix': u_mix,\n",
+    "        'p': p,\n",
+    "        'rhs': rhs\n",
+    "    }"
    ]
   },
   {
@@ -131,35 +206,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulate(eqs, dt, tf):\n",
-    "    eqs = derive_equations()\n",
-    "    x0 = eqs['x0']\n",
-    "    p0 = eqs['p0']\n",
+    "def simulate(eqs: dict, dt: float, tf: float):\n",
+    "    x0 = [0]*12\n",
+    "    p0 = [1, 0.5, 0.05, 1, 1, 1]\n",
+    "    u0 = [0.5,0.5,0.5,0.5]\n",
     "    t_vect = np.arange(0, tf, dt)\n",
     "    xi = x0\n",
     "    data = {\n",
     "        't': [],\n",
     "        'x': [],\n",
     "        'u': [],\n",
-    "        'euler': [],\n",
+    "        # 'euler': [],\n",
     "    }\n",
     "    for t in t_vect:\n",
-    "        u = np.array(eqs['control'](xi, p0)).reshape(-1)\n",
+    "        # u = np.array(eqs['control'](xi, p0)).reshape(-1)\n",
     "\n",
     "        data['x'].append(xi)\n",
     "        data['u'].append(u)\n",
     "        data['t'].append(t)\n",
-    "        data['euler'].append(np.array(eqs['mrp_to_euler'](xi[6:10])).reshape(-1))\n",
+    "        # data['euler'].append(np.array(eqs['mrp_to_euler'](xi[6:10])).reshape(-1))\n",
     "        \n",
-    "        res = scipy.integrate.solve_ivp(fun=lambda t, x: np.array(eqs['rhs'](xi, u, p0)).reshape(-1), t_span=[t, t+dt], t_eval=[t+dt], y0=xi)\n",
+    "        res = scipy.integrate.solve_ivp(fun=lambda t, x: np.array(eqs['rhs'](xi, u0, p0)).reshape(-1), t_span=[t, t+dt], t_eval=[t+dt], y0=xi)\n",
     "        xi = res['y']\n",
-    "        xi[6:10] = eqs['shadow_if_necessary'](xi[6:10])\n",
-    "        xi = eqs['saturate'](xi)\n",
+    "        # xi[6:10] = eqs['shadow_if_necessary'](xi[6:10])\n",
+    "        # xi = eqs['saturate'](xi)\n",
     "        xi = np.array(xi).reshape(-1)\n",
     "\n",
     "    for k in data.keys():\n",
     "        data[k] = np.array(data[k])\n",
     "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    quad_model = derive_equations()\n",
+    "    data = simulate(quad_model, 0.01, 10)"
    ]
   }
  ],
