--- a/python/reference_nb/scratch_paper.ipynb
+++ b/python/reference_nb/scratch_paper.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,20 +490,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[4, 1, 4, 2, 0, 9, 6, 6, 4, 0, 0, 8],\n       [3, 6, 6, 7, 6, 0, 0, 2, 6, 9, 3, 8],\n       [5, 2, 8, 5, 9, 1, 9, 8, 9, 2, 9, 1],\n       [9, 5, 3, 6, 0, 3, 5, 8, 6, 4, 8, 6],\n       [6, 3, 4, 4, 5, 3, 8, 0, 1, 4, 3, 2]])"
+      "text/plain": "array([[3, 7, 0, 4, 0, 6, 6, 9, 3, 3, 1, 5],\n       [8, 1, 9, 5, 6, 1, 3, 3, 4, 4, 0, 5],\n       [6, 2, 6, 8, 6, 5, 7, 8, 0, 1, 1, 4],\n       [5, 4, 7, 8, 0, 1, 1, 7, 2, 1, 8, 9],\n       [7, 3, 3, 5, 6, 2, 9, 4, 5, 2, 6, 3]])"
      },
      "metadata": {},
-     "execution_count": 47
+     "execution_count": 3
     }
    ],
    "source": [
     "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "3.5"
+     },
+     "metadata": {},
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "a[0,:4].mean()"
    ]
   },
   {
